refactor autograd module, minor changes and bug fixes

--- a/notebooks/graph.ipynb
+++ b/notebooks/graph.ipynb
@@ -12,8 +12,9 @@
    "outputs": [],
    "source": [
     "import numpy as np\n",
+    "import api.lib.autograd as ag\n",
     "\n",
-    "from api.lib.autograd import Session, Graph, Placeholder, Variable, math, gradients"
+    "from api.lib.autograd import Graph, Session, Placeholder, Variable, gradients"
    ]
   },
   {
@@ -28,7 +29,7 @@
       "Forward pass computed: 2.0\n",
       "dout/dx expected = 2.0\n",
       "dout/dx computed = 2.0\n",
-      "dout/dy expected = 1\n",
+      "dout/dy expected = 1.0\n",
       "dout/dy computed = 1.0\n"
      ]
     }
@@ -50,7 +51,7 @@
     "\n",
     "print(f\"dout/dx expected = {2.0}\")\n",
     "print(f\"dout/dx computed = {grads[x]}\")\n",
-    "print(f\"dout/dy expected = {1}\")\n",
+    "print(f\"dout/dy expected = {1.0}\")\n",
     "print(f\"dout/dy computed = {grads[y]}\")"
    ],
    "metadata": {
@@ -62,7 +63,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 4,
    "outputs": [
     {
      "name": "stdout",
@@ -80,46 +81,42 @@
     }
    ],
    "source": [
-    "val1 = np.array([1, 2, 3])\n",
+    "some_value = np.array([1, 2, 3])\n",
     "\n",
-    "def sigmoid(x):\n",
-    "    return 1 / (1 + math.exp(-x))\n",
+    "sigmoid_autograd = lambda x: 1 / (1 + ag.exp(-x))\n",
+    "sigmoid_numpy = lambda x: 1 / (1 + np.exp(np.negative(x)))\n",
+    "dsigmoid = lambda x: sigmoid_numpy(x) * (1 - sigmoid_numpy(x))\n",
     "\n",
-    "def relu(x):\n",
-    "    return math.max(x, 0)\n",
-    "\n",
-    "sigmoid_f = lambda x: 1 / (1 + np.exp(-x))\n",
-    "dsigmoid = lambda x: sigmoid_f(x) * (1 - sigmoid_f(x))\n",
-    "\n",
-    "relu_f = lambda x: np.maximum(0, x)\n",
+    "relu_autograd = lambda x: ag.max(0, x)\n",
+    "relu_numpy = lambda x: np.maximum(0, x)\n",
     "drelu = lambda x: np.where(x<=0,0,1)\n",
     "\n",
     "with Graph() as g:\n",
     "    x = Placeholder('x')\n",
-    "    out = sigmoid(x)\n",
+    "    out = sigmoid_autograd(x)\n",
     "\n",
     "    sess = Session()\n",
-    "    frwrd = sess.run(out, feed_dict={'x': val1})\n",
+    "    frwrd = sess.run(out, feed_dict={'x': some_value})\n",
     "    grads = gradients(out)\n",
     "\n",
-    "    print(f\"Forward pass expected: {sigmoid_f(val1)}\")\n",
+    "    print(f\"Forward pass expected: {sigmoid_numpy(some_value)}\")\n",
     "    print(f\"Forward pass computed: {frwrd}\")\n",
     "\n",
-    "    print(f\"dout/dx expected = {dsigmoid(val1)}\")\n",
+    "    print(f\"dout/dx expected = {dsigmoid(some_value)}\")\n",
     "    print(f\"dout/dx computed = {grads[x]}\")\n",
     "\n",
     "with Graph() as g:\n",
     "    x = Placeholder('x')\n",
-    "    out = relu(x)\n",
+    "    out = relu_autograd(x)\n",
     "\n",
     "    sess = Session()\n",
-    "    frwrd = sess.run(out, feed_dict={'x': val1})\n",
+    "    frwrd = sess.run(out, feed_dict={'x': some_value})\n",
     "    grads = gradients(out)\n",
     "\n",
-    "    print(f\"Forward pass expected: {relu_f(val1)}\")\n",
+    "    print(f\"Forward pass expected: {relu_numpy(some_value)}\")\n",
     "    print(f\"Forward pass computed: {frwrd}\")\n",
     "\n",
-    "    print(f\"dout/dx expected = {drelu(val1)}\")\n",
+    "    print(f\"dout/dx expected = {drelu(some_value)}\")\n",
     "    print(f\"dout/dx computed = {grads[x]}\")"
    ],
    "metadata": {
