autograd fix: make the gradient function return gradients by node name, not by the node itself

--- a/notebooks/graph.ipynb
+++ b/notebooks/graph.ipynb
@@ -50,9 +50,9 @@
     "print(f\"Forward pass computed: {frwrd}\")\n",
     "\n",
     "print(f\"dout/dx expected = {2.0}\")\n",
-    "print(f\"dout/dx computed = {grads[x]}\")\n",
+    "print(f\"dout/dx computed = {grads['x']}\")\n",
     "print(f\"dout/dy expected = {1.0}\")\n",
-    "print(f\"dout/dy computed = {grads[y]}\")"
+    "print(f\"dout/dy computed = {grads['y']}\")"
    ],
    "metadata": {
     "collapsed": false,
@@ -63,7 +63,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 3,
    "outputs": [
     {
      "name": "stdout",
@@ -74,7 +74,7 @@
       "dout/dx expected = [0.19661193 0.10499359 0.04517666]\n",
       "dout/dx computed = [0.19661193 0.10499359 0.04517666]\n",
       "Forward pass expected: [1 2 3]\n",
-      "Forward pass computed: [1. 2. 3.]\n",
+      "Forward pass computed: [1 2 3]\n",
       "dout/dx expected = [1 1 1]\n",
       "dout/dx computed = [1. 1. 1.]\n"
      ]
@@ -103,7 +103,7 @@
     "    print(f\"Forward pass computed: {frwrd}\")\n",
     "\n",
     "    print(f\"dout/dx expected = {dsigmoid(some_value)}\")\n",
-    "    print(f\"dout/dx computed = {grads[x]}\")\n",
+    "    print(f\"dout/dx computed = {grads['x']}\")\n",
     "\n",
     "with Graph() as g:\n",
     "    x = Placeholder('x')\n",
@@ -117,7 +117,7 @@
     "    print(f\"Forward pass computed: {frwrd}\")\n",
     "\n",
     "    print(f\"dout/dx expected = {drelu(some_value)}\")\n",
-    "    print(f\"dout/dx computed = {grads[x]}\")"
+    "    print(f\"dout/dx computed = {grads['x']}\")"
    ],
    "metadata": {
     "collapsed": false,
