update old examples

--- a/notebooks/graph.ipynb
+++ b/notebooks/graph.ipynb
@@ -14,7 +14,7 @@
     "import numpy as np\n",
     "import api.lib.autograd as ag\n",
     "\n",
-    "from api.lib.autograd import Graph, Session, Placeholder, Variable, gradients"
+    "from api.lib.autograd import Graph, Session, Placeholder, Variable"
    ]
   },
   {
@@ -44,15 +44,15 @@
     "\n",
     "sess = Session()\n",
     "frwrd = sess.run(out)\n",
-    "grads = gradients(out)\n",
+    "grads = sess.gradients(out)\n",
     "\n",
     "print(f\"Forward pass expected: {2*x_val + y_val}\")\n",
     "print(f\"Forward pass computed: {frwrd}\")\n",
     "\n",
     "print(f\"dout/dx expected = {2.0}\")\n",
-    "print(f\"dout/dx computed = {grads['x']}\")\n",
+    "print(f\"dout/dx computed = {grads[x]}\")\n",
     "print(f\"dout/dy expected = {1.0}\")\n",
-    "print(f\"dout/dy computed = {grads['y']}\")"
+    "print(f\"dout/dy computed = {grads[y]}\")"
    ],
    "metadata": {
     "collapsed": false,
@@ -89,7 +89,7 @@
     "\n",
     "relu_autograd = lambda x: ag.max(0, x)\n",
     "relu_numpy = lambda x: np.maximum(0, x)\n",
-    "drelu = lambda x: np.where(x<=0,0,1)\n",
+    "drelu = lambda x: np.where(x <= 0, 0, 1)\n",
     "\n",
     "with Graph() as g:\n",
     "    x = Placeholder('x')\n",
@@ -97,27 +97,27 @@
     "\n",
     "    sess = Session()\n",
     "    frwrd = sess.run(out, feed_dict={'x': some_value})\n",
-    "    grads = gradients(out)\n",
+    "    grads = sess.gradients(out)\n",
     "\n",
     "    print(f\"Forward pass expected: {sigmoid_numpy(some_value)}\")\n",
     "    print(f\"Forward pass computed: {frwrd}\")\n",
     "\n",
     "    print(f\"dout/dx expected = {dsigmoid(some_value)}\")\n",
-    "    print(f\"dout/dx computed = {grads['x']}\")\n",
+    "    print(f\"dout/dx computed = {grads[x]}\")\n",
     "\n",
-    "with Graph() as g:\n",
+    "with Graph():\n",
     "    x = Placeholder('x')\n",
     "    out = relu_autograd(x)\n",
     "\n",
     "    sess = Session()\n",
     "    frwrd = sess.run(out, feed_dict={'x': some_value})\n",
-    "    grads = gradients(out)\n",
+    "    grads = sess.gradients(out)\n",
     "\n",
     "    print(f\"Forward pass expected: {relu_numpy(some_value)}\")\n",
     "    print(f\"Forward pass computed: {frwrd}\")\n",
     "\n",
     "    print(f\"dout/dx expected = {drelu(some_value)}\")\n",
-    "    print(f\"dout/dx computed = {grads['x']}\")"
+    "    print(f\"dout/dx computed = {grads[x]}\")"
    ],
    "metadata": {
     "collapsed": false,
