update old notebooks

--- a/notebooks/graph.ipynb
+++ b/notebooks/graph.ipynb
@@ -12,9 +12,8 @@
    "outputs": [],
    "source": [
     "import numpy as np\n",
-    "import api.lib.autograd as ag\n",
     "\n",
-    "from api.lib.autograd import Graph, Session, Placeholder, Variable"
+    "from api.core.autograd import Graph, Session, Placeholder, Variable, ops"
    ]
   },
   {
@@ -43,16 +42,16 @@
     "out = 2*x + y\n",
     "\n",
     "sess = Session()\n",
-    "frwrd = sess.run(out)\n",
-    "grads = sess.gradients(out)\n",
+    "forward = sess.run(out)\n",
+    "x_grad, y_grad = sess.gradients(out, returns=[x, y])\n",
     "\n",
     "print(f\"Forward pass expected: {2*x_val + y_val}\")\n",
-    "print(f\"Forward pass computed: {frwrd}\")\n",
+    "print(f\"Forward pass computed: {forward}\")\n",
     "\n",
     "print(f\"dout/dx expected = {2.0}\")\n",
-    "print(f\"dout/dx computed = {grads[x]}\")\n",
+    "print(f\"dout/dx computed = {x_grad}\")\n",
     "print(f\"dout/dy expected = {1.0}\")\n",
-    "print(f\"dout/dy computed = {grads[y]}\")"
+    "print(f\"dout/dy computed = {y_grad}\")"
    ],
    "metadata": {
     "collapsed": false,
@@ -83,11 +82,11 @@
    "source": [
     "some_value = np.array([1, 2, 3])\n",
     "\n",
-    "sigmoid_autograd = lambda x: 1 / (1 + ag.exp(-x))\n",
+    "sigmoid_autograd = lambda x: 1 / (1 + ops.exp(-x))\n",
     "sigmoid_numpy = lambda x: 1 / (1 + np.exp(np.negative(x)))\n",
     "dsigmoid = lambda x: sigmoid_numpy(x) * (1 - sigmoid_numpy(x))\n",
     "\n",
-    "relu_autograd = lambda x: ag.max(0, x)\n",
+    "relu_autograd = lambda x: ops.max(0, x)\n",
     "relu_numpy = lambda x: np.maximum(0, x)\n",
     "drelu = lambda x: np.where(x <= 0, 0, 1)\n",
     "\n",
@@ -96,29 +95,41 @@
     "    out = sigmoid_autograd(x)\n",
     "\n",
     "    sess = Session()\n",
-    "    frwrd = sess.run(out, feed_dict={'x': some_value})\n",
-    "    grads = sess.gradients(out)\n",
+    "    forward = sess.run(out, feed_dict={x.name: some_value})\n",
+    "    x_grad = grads = sess.gradients(out, returns=[x])\n",
     "\n",
     "    print(f\"Forward pass expected: {sigmoid_numpy(some_value)}\")\n",
-    "    print(f\"Forward pass computed: {frwrd}\")\n",
+    "    print(f\"Forward pass computed: {forward}\")\n",
     "\n",
     "    print(f\"dout/dx expected = {dsigmoid(some_value)}\")\n",
-    "    print(f\"dout/dx computed = {grads[x]}\")\n",
+    "    print(f\"dout/dx computed = {x_grad}\")\n",
     "\n",
     "with Graph():\n",
     "    x = Placeholder('x')\n",
     "    out = relu_autograd(x)\n",
     "\n",
     "    sess = Session()\n",
-    "    frwrd = sess.run(out, feed_dict={'x': some_value})\n",
-    "    grads = sess.gradients(out)\n",
+    "    forward = sess.run(out, feed_dict={x.name: some_value})\n",
+    "    x_grad = sess.gradients(out, returns=[x])\n",
     "\n",
     "    print(f\"Forward pass expected: {relu_numpy(some_value)}\")\n",
-    "    print(f\"Forward pass computed: {frwrd}\")\n",
+    "    print(f\"Forward pass computed: {forward}\")\n",
     "\n",
     "    print(f\"dout/dx expected = {drelu(some_value)}\")\n",
-    "    print(f\"dout/dx computed = {grads[x]}\")"
+    "    print(f\"dout/dx computed = {x_grad}\")"
    ],
+   "metadata": {
+    "collapsed": false,
+    "pycharm": {
+     "name": "#%%\n"
+    }
+   }
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "outputs": [],
+   "source": [],
    "metadata": {
     "collapsed": false,
     "pycharm": {
